@@ -41,6 +41,7 @@ use PPI::Token::Number::Binary        ();
 use PPI::Token::Number::Octal         ();
 use PPI::Token::Number::Hex           ();
 use PPI::Token::Number::Float         ();
+use PPI::Token::Number::Exp           ();
 use PPI::Token::Number::Version       ();
 use PPI::Token::Word                  ();
 use PPI::Token::DashedWord            ();
