@@ -1,0 +1,10 @@
+0E0;
+1.0e-02;
+1.0E-2;
+1e+10;
+1E+10;
+e-1;
+0 e0;
+1.e();
+1.exp(1);
+1__E+__1__0;
